@startuml Estados del Pedido

skinparam state {
    BackgroundColor LightBlue
    BorderColor DarkBlue
}

title Maquina de Estados del Pedido (State Pattern)

[*] --> Creado

Creado --> Validado : validar()
Creado --> Cancelado : cancelar()

Validado --> PendienteAsignacion : poner_pendiente()
Validado --> Cancelado : cancelar()

PendienteAsignacion --> Asignado : asignar(repartidor_id)
PendienteAsignacion --> Cancelado : cancelar()

Asignado --> EnRuta : iniciar_ruta()
Asignado --> PendienteAsignacion : poner_pendiente()\n[reasignacion]
Asignado --> Cancelado : cancelar()

EnRuta --> Entregado : entregar()
EnRuta --> IntentoFallido : registrar_intento_fallido()
EnRuta --> Cancelado : cancelar()

IntentoFallido --> Reprogramado : reprogramar()
IntentoFallido --> Cancelado : cancelar()

Reprogramado --> Asignado : asignar(repartidor_id)
Reprogramado --> Cancelado : cancelar()

Entregado --> [*]
Cancelado --> [*]

state Entregado #LightGreen : Estado final\nPuede generar incidencias
state Cancelado #Salmon : Estado final\nNo permite mas transiciones

note right of PendienteAsignacion
    Flujo no lineal:
    Asignado puede volver a
    PendienteAsignacion
    (reasignacion)
end note

note left of IntentoFallido
    Flujo: EnRuta -> IntentoFallido
    -> Reprogramado -> Asignado
    (reintento)
end note

@enduml
